[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "boto3>=1.43.6",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "moto[s3]>=5.2.1",
    "pytest>=9.0.3",
]
 